@@ -126,6 +126,13 @@ stop_server() {
     return $errcode
 }
 
+reload_server() {
+    [ ! -e "$PIDFILE" ] && return
+    if running ; then
+        kill -USR2 $pid
+    fi
+}
+
 force_stop() {
 # Force the process to die killing it manually
     [ ! -e "$PIDFILE" ] && return
@@ -231,8 +238,17 @@ case "$1" in
         fi
     ;;
   reload)
-        log_warning_msg "Reloading $NAME daemon: not implemented, as the daemon"
-        log_warning_msg "cannot re-read the config file (use restart)."
+        log_daemon_msg "Reloading $DESC" "$NAME"
+        if running ; then
+            # Only reload the server if we see it running
+            reload_server
+            log_end_msg 0
+        else
+            # If it's not running don't do anything
+            log_progress_msg "apparently not running"
+            log_end_msg 0
+            exit 0
+        fi
     ;;
   *)
         N=/etc/init.d/$NAME
