@@ -1,6 +1,7 @@
 sl2d (0.3.0~dev-1) unstable; urgency=low
 
   * New upstream release.
+  * Add support for reload.
 
  -- Gilles Dartiguelongue <gdartigu@smartjog.com>  Tue, 07 Jul 2009 14:45:51 +0200
 
